Add Home content and CV page. Remove About page and example blogs.

--- a/index.html
+++ b/index.html
@@ -2,3 +2,28 @@
 title: Home
 layout: home
 ---
+
+<h1 class="content-title divided">
+  Introduction
+</h1>
+
+I am currently in the second and last year of the Research Master of the <a href="https://www.rug.nl/research/gradschool-behavioural-and-social-sciences/?lang=en" target="_blank">Graduate School of Behavioural and Social Sciences</a>, at the University of Groningen and located in the Netherlands.
+
+<img src="/assets/images/profile.png" alt="Profile picture">
+
+As a student of this programme, I am constantly pushed to develop myself further as an academic researcher, through the extensive emphasis that is placed on research methodology and statistics. In this programme, my studies take place within the theme of Mental Health as I am specialising in Clinical Psychology.
+
+<br>
+<br>
+
+My research interests lie specifically with the domain of anxiety disorders. I am currently in the process of writing my Master's thesis, which focuses on highly intensive treatments for children with therapy-resistant anxiety and obsessive-compulsive disorders. Concurrently, I am carrying out a 9-month clinical internship at the research and mental health institution <a href="https://www.accare.nl/" target="_blank">Accare</a>. Here, I am part of a multidisciplinary team where I assist with intakes, evidence-based treatments of clients and diagnosis, as well as with on-going research projects.
+
+<br>
+<br>
+
+Beyond my interest in anxiety, I am inspired by the mindset of positive psychology and I am involved in research regarding the role and impact of Meaning in Life in relation to psychopathology. The interested reader may <a href="/work">go here</a> to read more about my prior and on-going work and projects.
+
+<br>
+<br>
+
+In my spare time I enjoy running, playing the piano, and tinkering with computers and software. <em>This very website</em> is a result of the latter hobby, and I transformed a spare pc to a home-server to allow me to experiment with programming, systems administration, and networking. Sometimes I blog about the things that I learn as I go, which can be found <a href="/blog">below</a>.
