--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: home
 
 I am currently in the second and last year of the Research Master of the <a href="https://www.rug.nl/research/gradschool-behavioural-and-social-sciences/?lang=en" target="_blank">Graduate School of Behavioural and Social Sciences</a>, at the University of Groningen and located in the Netherlands.
 
-<img src="/assets/images/profile.png" alt="Profile picture">
+<img src="/assets/images/profile.png" alt="Profile picture" style="max-width:33%; height: auto">
 
 As a student of this programme, I am constantly pushed to develop myself further as an academic researcher, through the extensive emphasis that is placed on research methodology and statistics. In this programme, my studies take place within the theme of Mental Health as I am specialising in Clinical Psychology.
 
