--- a/index.html
+++ b/index.html
@@ -25,4 +25,7 @@ layout: home
   <p>Beyond my interest in anxiety, I am inspired by the mindset of positive psychology and I am involved in research regarding the role and impact of Meaning in Life in relation to psychopathology. The interested reader may <a href="/work">go here</a> to read more about my prior and on-going work and projects.</p><br>
 
   <p>In my spare time I enjoy running, playing the piano, and tinkering with computers and software. <a href="{% post_url 2022-08-24-a-new-website %}">This very website</a> is a result of the latter hobby, and I <a href="{% post_url 2022-03-15-transforming-a-university-pc-to-my-new-homelab %}">transformed an old University pc to a home-server</a> to allow me to experiment with programming, systems administration, and networking. Sometimes I blog about the things that I learn as I go, which can be found <a href="/blog">below</a>.</p>
+
+Test
+
 </div>
