--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: home
 
 <div>
 
-  <p>I am currently BART in the second and last year of the Research Master of the <a href="https://www.rug.nl/research/gradschool-behavioural-and-social-sciences/?lang=en" target="_blank">Graduate School of Behavioural and Social Sciences</a>, at the University of Groningen and located in the Netherlands.</p>
+  <p>I am currently in the second and last year of the Research Master of the <a href="https://www.rug.nl/research/gradschool-behavioural-and-social-sciences/?lang=en" target="_blank">Graduate School of Behavioural and Social Sciences</a>, at the University of Groningen and located in the Netherlands.</p>
 
   <!-- <img src="/assets/images/profile-yellow.png" alt="Profile picture" style="max-width:33%; height: auto"> -->
 
