--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: home
 
 <div>
 
-  <p>I am currently in the second and last year of the Research Master of the <a href="https://www.rug.nl/research/gradschool-behavioural-and-social-sciences/?lang=en" target="_blank">Graduate School of Behavioural and Social Sciences</a>, at the University of Groningen and located in the Netherlands.</p>
+  <p>I am a PhD student in clinical psychology and experimental psychopathology at Accare and the University of Groningen, located in the Netherlands.</p>
 
   <!-- <img src="/assets/images/profile-yellow.png" alt="Profile picture" style="max-width:33%; height: auto"> -->
 
@@ -18,11 +18,7 @@ layout: home
       <img src="/assets/images/profile.png" alt="Profile picture" style="max-width:35%; height: auto">
   </picture>
 
-  <p>As a student of this programme, I am constantly pushed to develop myself further as an academic researcher, through the extensive emphasis that is placed on research methodology and statistics. In this programme, my studies take place within the theme of Mental Health as I am specialising in Clinical Psychology.</p><br>
-
-  <p>My research interests lie specifically with the domain of anxiety disorders. I am currently in the process of writing my Master's thesis, which focuses on highly intensive treatments for children with therapy-resistant anxiety and obsessive-compulsive disorders. Concurrently, I am carrying out a 9-month clinical internship at the research and mental health institution <a href="https://www.accare.nl/" target="_blank">Accare</a>. Here, I am part of a multidisciplinary team where I conduct client intakes, clinical diagnostic interviews, and evidence-based treatments, and where I assist with organisataion and data collection of on-going research projects.</p><br>
-
-  <p>Beyond my interest in anxiety, I am inspired by the mindset of positive psychology and I am involved in research regarding the role and impact of Meaning in Life in relation to psychopathology. The interested reader may <a href="/work">go here</a> to read more about my prior and on-going work and projects.</p><br>
+  <p>My research interests lie specifically with the domain of anxiety and obsessive-compulsive disorders. With my research, I aim to improve our understanding of how CBT for youth with (persistent) anxiety or OCD can be improved and to identify the mechanisms of change. You may <a href="/work">go here</a> to read more about my prior and on-going work and projects.</p><br>
 
   <p>In my spare time I enjoy running, playing the piano, and tinkering with computers and software. <a href="{% post_url 2022-08-24-a-new-website %}">This very website</a> is a result of the latter hobby, and I <a href="{% post_url 2022-03-15-transforming-a-university-pc-to-my-new-homelab %}">transformed an old University pc to a home-server</a> to allow me to experiment with programming, systems administration, and networking. Sometimes I blog about the things that I learn as I go, which can be found <a href="/blog">below</a>.</p>
 
